--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,9 @@ DB_NAME=research_navigator
 
 # LLM
 OPENAI_API_KEY=sk-your-openai-key
+OPENROUTER_API_KEY=
+OPENROUTER_BASE_URL=https://openrouter.ai/api/v1
+OPENROUTER_MODEL=openai/gpt-5-mini
 
 # API Keys (optional - get free keys from each provider)
 OPENALEX_API_KEY=
@@ -15,7 +18,10 @@ CORE_API_KEY=
 SECRET_KEY=your-secret-key-change-in-production
 
 # CORS
-CORS_ORIGINS=http://localhost:3000,https://portal.iibpr.org.br
+CORS_ORIGINS=http://localhost:5173,http://localhost:3000,https://portal.iibpr.org.br
 
 # Debug
 DEBUG=false
+
+# Local dev toggle (set true to run backend without PostgreSQL)
+DISABLE_DB=false
