--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,9 @@ services:
       DATABASE_URL_SYNC: postgresql://research:research123@db:5432/research_navigator
       REDIS_URL: redis://redis:6379/0
       OPENAI_API_KEY: ${OPENAI_API_KEY}
+      OPENROUTER_API_KEY: ${OPENROUTER_API_KEY}
+      OPENROUTER_BASE_URL: ${OPENROUTER_BASE_URL:-https://openrouter.ai/api/v1}
+      OPENROUTER_MODEL: ${OPENROUTER_MODEL:-openai/gpt-5.1-mini}
       SECRET_KEY: ${SECRET_KEY:-your-secret-key}
       CORS_ORIGINS: ${CORS_ORIGINS:-http://localhost:3000}
     ports:
